# mlentory_etl_backend

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.cursor/rules/: general.mdc
.github/workflows/: docs.yml  test.yml
api/: ARCHITECTURE.md  Dockerfile  QUICK_START.md  README.md  config.py  main.py
api/controllers/: EntityController.py  LLMController.py  ModelContextProcessor.py  PlatformDocsController.py  RelatedModelsController.py  SearchController.py
api/dbHandler/: IndexHandler.py  SQLHandler.py
api/entities/: ElasticsearchEntities.py
api/routers/: graph.py  llm.py  models.py  stats.py  stella.py
api/schemas/: entities.py  graph.py  responses.py
api/services/: RelatedModelsController.py  elasticsearch_service.py  entity_service.py  faceted_search.py  graph_service.py  llm_service.py  metadata_service.py  model_context_service.py  model_service.py  neo4j_service.py  ro_crate_service.py  search_service.py  vector_search_service.py
api/utils/: cache_manager.py  llm_runners.py  utils.py
config/etl/: README.md  run_config.yaml
config/hf_schema_extraction/: llm_questions.csv  llm_templates.csv
data/refs/: Hugging_Face_Tasks__with_definitions_.csv  hf_model_ids.txt  hf_tasks.csv
deploy/dagster/: dagster.yaml  workspace.yaml
deploy/docker/: Dockerfile.dagster
docs/: EXTRACTION_MODES.md  README.md  architecture.md  concepts-tutorial.md  etl_process_diagram.md  fair4ml.md  hf_enrichment_assets.md  hf_rdf_loader.md  hf_search_indexing.md  hf_transformation_architecture.md  hf_transformation_implementation.md  index.md  running_pipelines.md
docs/api/: extractors.md  loaders.md  schemas.md  transformers.md
docs/architecture/: components.md  data-flow.md  deployment.md  overview.md  system-design.md
docs/backend-api/: architecture.md  components.md  data-flow.md  overview.md
docs/concepts/: dagster-basics.md  etl-overview.md  fair4ml-schema.md  graph-databases.md
docs/concepts-tutorial/: dagster.md  elasticsearch.md  etl.md  neo4j.md  schema.md
docs/development/: code-style.md  contributing.md  debugging.md  setup.md  testing.md
docs/examples/: basic-etl.md  custom-extractor.md  elasticsearch-queries.md  neo4j-queries.md
docs/extractors/: adding-extractor.md  ai4life.md  code-flow.md  huggingface.md  openml.md  overview.md
docs/getting-started/: configuration.md  first-run.md  quickstart.md
docs/guides/: adding-source.md  best-practices.md  custom-transformations.md  performance.md
docs/loaders/: code-flow.md  elasticsearch.md  neo4j.md  overview.md  rdf.md
docs/operations/: maintenance.md  monitoring.md  running-pipelines.md  troubleshooting.md
docs/schemas/: fair4ml.md  schemas.md  source-schemas.md  structure.md
etl/: __init__.py  config.py  repository.py
etl/assets/: hf_loading.py  (+11 more)
etl_extractors/: __init__.py
etl_loaders/: __init__.py  elasticsearch_store.py  hf_index_loader.py  hf_rdf_loader.py  index_loader.py  load_helpers.py  metadata_graph.py  openml_index_loader.py  rdf_loader.py  rdf_store.py  vector_index_manager.py
loaders/: __init__.py
mcp_api/: Dockerfile  QUICK_START.md  README.md  __init__.py  server.py  tools.py
mlentory_mcp/: requirements.txt
playground/: kaggle_model_cards_tutorial.ipynb
schemas/: __init__.py
scripts/: README.md  cleanup_old_data.py  reindex_hf_models.py  verify_setup.sh
tests/: __init__.py  conftest.py
transformers/: __init__.py
(+153 files in other folders)
