[tool.poetry]
name = "mlentory-etl"
version = "0.1.0"
description = "A modular ETL pipeline for ML model metadata extraction, normalization, and storage"
authors = ["MLentory Team"]
readme = "README.md"
packages = [
    { include = "etl" },
    { include = "extractors" },
    { include = "transformers" },
    { include = "loaders" },
    { include = "schemas" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
dagster = "^1.11.0"
dagster-webserver = "^1.10.0"
dagster-postgres = "^0.27.0"
dagster-docker = "^0.27.0"
pydantic = "^2.5.0"
neo4j = "^5.14.0"
elasticsearch = "^8.11.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
aiohttp = "^3.9.0"
rdflib = "^7.0.0"
rdflib-neo4j = "^1.1.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
datasets = "^3.0.0"
huggingface-hub = "^0.30.0"
arxiv = "^2.1.0"
spdx-lookup = "^0.3.3"
wikipedia-api = "^0.7.1"
wikidata = "^0.7.0"
openml = "^0.15.1"
selenium = "^4.38.0"
pycountry = "^24.5.0"
elasticsearch-dsl = "^8.0.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external APIs",
    "slow: Slow running tests",
    "e2e: End-to-end pipeline tests",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.11.0"
mypy = "^1.7.0"
ruff = "^0.1.6"
ipython = "^8.17.0"
ipdb = "^0.13.13"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
pymdown-extensions = "^10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dagster.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neo4j.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "elasticsearch.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

